Updated test init to execute on firefox and IE

--- a/src/test/resources/config/testConfig.properties
+++ b/src/test/resources/config/testConfig.properties
@@ -5,16 +5,16 @@ implicitWait=80
 explicitWait=100
 
 ############ browser type ########
-browser=chrome
+#browser=chrome
 chromeDriver=/src/test/resources/drivers/chromedriver.exe
 
 ############ browser type ########
 #browser=firefox
-#chromeDriver=/src/test/resources/drivers/geckodriver.exe
+geckoDriver=/src/test/resources/drivers/geckodriver.exe
 
 ############ browser type ########
-#browser=IE
-#chromeDriver=/src/test/resources/drivers/IEDriver.exe
+browser=IE
+IEDriver=/src/test/resources/drivers/IEDriverServer.exe
 
 ############ base url ########
 url=https://amazon.com
